Added Auth from clerk

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,4 @@ MONGODB_URI=mongodb+srv://umee024:rNA6dOS5u8ZGhb8u@cluster0.zkwayqh.mongodb.net/
 
 
 #rNA6dOS5u8ZGhb8u Password
+ADMIN_EMAIL=umee7d@gmail.com
